typocode/src/widgets/snapshots/typocode__widgets__summary__tests__summary_at_100_percent.snap
---
source: src/widgets/summary.rs
assertion_line: 98
expression: "render_summary(\"00:12\", 100)"
---
                                        
    ┌ summary ─────────────────────┐    
    │         Run complete!        │    
    │                              │    
    │       Time:      00:12       │    
    │       Accuracy:   100%       │    
    │                              │    
    │ Tab to restart   Esc to quit │    
    └──────────────────────────────┘
