typocode/src/widgets/snapshots/typocode__widgets__summary__tests__summary_at_80_percent.snap
---
source: src/widgets/summary.rs
assertion_line: 109
expression: "render_summary(\"00:12\", 80, 52)"
---
    ┌ summary ─────────────────────┐    
    │         Run complete!        │    
    │                              │    
    │       Accuracy:    80%       │    
    │       Time:      00:12       │    
    │       WPM:          52       │    
    │                              │    
    │ Tab to restart   Esc to quit │    
    └──────────────────────────────┘
