typocode/src/widgets/snapshots/typocode__widgets__summary__tests__summary_at_single_digit_accuracy.snap
---
source: src/widgets/summary.rs
assertion_line: 108
expression: "render_summary(\"00:12\", 7)"
---
                                        
    ┌ summary ─────────────────────┐    
    │         Run complete!        │    
    │                              │    
    │       Time:      00:12       │    
    │       Accuracy:     7%       │    
    │                              │    
    │ Tab to restart   Esc to quit │    
    └──────────────────────────────┘
