typocode/src/widgets/snapshots/typocode__widgets__summary__tests__summary_at_zero_accuracy.snap
---
source: src/widgets/summary.rs
assertion_line: 119
expression: "render_summary(\"00:12\", 0, 0)"
---
    ┌ summary ─────────────────────┐    
    │         Run complete!        │    
    │                              │    
    │       Accuracy:     0%       │    
    │       Time:      00:12       │    
    │       WPM:           0       │    
    │                              │    
    │ Tab to restart   Esc to quit │    
    └──────────────────────────────┘
