typocode/src/widgets/snapshots/typocode__widgets__summary__tests__summary_shows_three_digit_wpm.snap
---
source: src/widgets/summary.rs
assertion_line: 124
expression: "render_summary(\"00:12\", 100, 142)"
---
    ┌ summary ─────────────────────┐    
    │         Run complete!        │    
    │                              │    
    │       Accuracy:   100%       │    
    │       Time:      00:12       │    
    │       WPM:         142       │    
    │                              │    
    │ Tab to restart   Esc to quit │    
    └──────────────────────────────┘
